--- a/style/style.css
+++ b/style/style.css
@@ -19,7 +19,8 @@ html, body {
   top: 10vh;
   z-index: 1;
   display: flex; /* Sử dụng flexbox để sắp xếp hình ảnh và văn bản */
-  align-items: flex-start; /* Căn chỉnh hình ảnh lên trên cùng */
+  flex-direction: column; /* Đặt hình ảnh và văn bản theo chiều dọc */
+  align-items: center; /* Căn giữa nội dung */
 }
 
 .container div.seven,
@@ -126,9 +127,9 @@ html, body {
 
 .six img {
   display: inline-block;
-  max-width: 45%; /* Giữ nguyên kích thước hình ảnh */
+  max-width: 50%; /* Giảm kích thước hình ảnh xuống 50% */
   height: auto;
-  margin-right: 20px; /* Khoảng cách giữa hình ảnh và văn bản */
+  margin-bottom: 10px; /* Thêm khoảng cách giữa hình ảnh và văn bản */
 }
 
 .six .hat {
@@ -220,14 +221,14 @@ html, body {
 }
 
 .wish-hbd {
-  font-size: 2.5em; /* Giảm kích thước chữ */
+  font-size: 2em; /* Giảm kích thước chữ */
   margin: 0;
   color: #ff1493; /* Deep pink */
 }
 
 .wish h5 {
   font-weight: lighter;
-  font-size: 1.4rem; /* Giảm kích thước chữ */
+  font-size: 1.2rem; /* Giảm kích thước chữ */
   margin: 10px 0 0;
   color: #db7093; /* Pale violet red */
 }
@@ -298,7 +299,7 @@ html, body {
   }
 
   .six img {
-    max-width: 80%; /* Giảm kích thước hình ảnh */
+    max-width: 50%; /* Giảm kích thước hình ảnh xuống 50% */
     height: auto;
     margin-bottom: 10px; /* Thêm khoảng cách giữa hình ảnh và văn bản */
   }
@@ -312,7 +313,7 @@ html, body {
   }
 
   .wish h5 {
-    font-size: 1.3rem; /* Giảm kích thước chữ */
+    font-size: 1.2rem; /* Giảm kích thước chữ */
   }
 
   .nine p {
